@@ -1,0 +1,25 @@
+version: 2
+jobs:
+    build:
+        docker: # run the steps with Docker
+            -   image: circleci/openjdk:8-jdk-browsers
+
+        steps:
+            - checkout
+            -   restore_cache:
+                    key: circleci-xmlenc-{{ checksum "pom.xml" }}
+
+            -   run: mvn dependency:go-offline
+
+            -   save_cache:
+                    paths:
+                        - ~/.m2
+                    key: circleci-xmlenc-{{ checksum "pom.xml" }}
+
+            -   run: mvn package
+
+            -   store_test_results:
+                    path: target/surefire-reports
+
+            -   store_artifacts:
+                    path: target/xmlenc-*.jar
